--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dots and Boxes!</title>
+    <title>Lets's Play Dots and Boxes!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+
+    <link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet'>
 </head>
 <body>
+    <h1>Dots and Boxes</h1>
     
 </body>
 </html>
